--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,4 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = mikalhart/TinyGPSPlus@^1.1.0, adafruit/Adafruit GFX Library@^1.11.11, adafruit/Adafruit ST7735 and ST7789 Library@^1.10.4
